--- a/AutomatedCodeGeneration.Library/AutomatedCodeGeneration.Library.csproj
+++ b/AutomatedCodeGeneration.Library/AutomatedCodeGeneration.Library.csproj
@@ -5,4 +5,10 @@
     <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Internal\Diagrams\Abstractions\" />
+    <Folder Include="Models\Internal\Diagrams\ClassDiagram\" />
+    <Folder Include="Models\Internal\LanguageManager\" />
+  </ItemGroup>
+
 </Project>
