--- a/AutomatedCodeGeneration.CLI/AutomatedCodeGeneration.CLI.csproj
+++ b/AutomatedCodeGeneration.CLI/AutomatedCodeGeneration.CLI.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AutomatedCodeGeneration.Library\AutomatedCodeGeneration.Library.csproj" />
+    <ProjectReference Include="..\AutomatedCodeGeneration\AutomatedCodeGeneration.csproj" />
   </ItemGroup>
 
 </Project>
