--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -47,3 +47,4 @@ jobs:
        # This must be used as GitHub Actions token does not support
        # pushing to protected branches.
        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       GITHUB_LOGIN: DanBuxton
