--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -46,5 +46,5 @@ jobs:
        #
        # This must be used as GitHub Actions token does not support
        # pushing to protected branches.
-       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       GITHUB_TOKEN: ${{ secrets.ACG_MERGE_ME_TOKEN }}
        GITHUB_LOGIN: DanBuxton
