--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -24,27 +24,27 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
 
-  merge-me:
-    name: Merge me!
-    needs:
-    - build_test
+#   merge-me:
+#     name: Merge me!
+#     needs:
+#     - build_test
 
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: Merge me!
-      uses: ridedott/merge-me-action@master
-      with:
-       # Depending on branch protection rules, a  manually populated
-       # `GITHUB_TOKEN_WORKAROUND` environment variable with permissions to
-       # push to a protected branch must be used. This variable can have an
-       # arbitrary name, as an example, this repository uses
-       # `GITHUB_TOKEN_DOTTBOTT`.
-       #
-       # When using a custom token, it is recommended to leave the following
-       # comment for other developers to be aware of the reasoning behind it:
-       #
-       # This must be used as GitHub Actions token does not support
-       # pushing to protected branches.
-       GITHUB_TOKEN: ${{ secrets.ACG_MERGE_ME_TOKEN }}
-       GITHUB_LOGIN: DanBuxton
+#     steps:
+#     - name: Merge me!
+#       uses: ridedott/merge-me-action@master
+#       with:
+#        # Depending on branch protection rules, a  manually populated
+#        # `GITHUB_TOKEN_WORKAROUND` environment variable with permissions to
+#        # push to a protected branch must be used. This variable can have an
+#        # arbitrary name, as an example, this repository uses
+#        # `GITHUB_TOKEN_DOTTBOTT`.
+#        #
+#        # When using a custom token, it is recommended to leave the following
+#        # comment for other developers to be aware of the reasoning behind it:
+#        #
+#        # This must be used as GitHub Actions token does not support
+#        # pushing to protected branches.
+#        GITHUB_TOKEN: ${{ secrets.ACG_MERGE_ME_TOKEN }}
+#        GITHUB_LOGIN: DanBuxton
