Moved database model and system models into different project.
Removed library and it's test project

Modified CLI

--- a/AutomatedCodeGeneration/AutomatedCodeGeneration.csproj
+++ b/AutomatedCodeGeneration/AutomatedCodeGeneration.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AutomatedCodeGeneration.Library\AutomatedCodeGeneration.Library.csproj" />
+    <ProjectReference Include="..\AutomatedCodeGeneration.DataLayer\AutomatedCodeGeneration.DataLayer.csproj" />
   </ItemGroup>
 
 </Project>
