--- a/AutomatedCodeGeneration.Tests/AutomatedCodeGeneration.Tests.csproj
+++ b/AutomatedCodeGeneration.Tests/AutomatedCodeGeneration.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -16,7 +16,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AutomatedCodeGeneration.CLI\AutomatedCodeGeneration.CLI.csproj" />
     <ProjectReference Include="..\AutomatedCodeGeneration\AutomatedCodeGeneration.csproj" />
   </ItemGroup>
 
