--- a/AutomatedCodeGeneration.DataLayer/AutomatedCodeGeneration.DataLayer.csproj
+++ b/AutomatedCodeGeneration.DataLayer/AutomatedCodeGeneration.DataLayer.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Octokit" Version="0.50.0" />
   </ItemGroup>
 
 </Project>
