Now outputs to GitHub

--- a/AutomatedCodeGeneration.CLI/AutomatedCodeGeneration.CLI.csproj
+++ b/AutomatedCodeGeneration.CLI/AutomatedCodeGeneration.CLI.csproj
@@ -13,10 +13,15 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AutomatedCodeGeneration\AutomatedCodeGeneration.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
