--- a/AutomatedCodeGeneration.CLI/AutomatedCodeGeneration.CLI.csproj
+++ b/AutomatedCodeGeneration.CLI/AutomatedCodeGeneration.CLI.csproj
@@ -2,18 +2,19 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-    <LangVersion>9.0</LangVersion>
+    <TargetFramework>net7.0</TargetFramework>
+    <!--<LangVersion>9.0</LangVersion>-->
+	  
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <UserSecretsId>61c6c59d-c7fc-4a3b-a6e1-de0f66ebd8c1</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
   </ItemGroup>
 
   <ItemGroup>
